Sunrise and Sunset time added on screen; Added different themes by weather condition and day periods(day or night); Added paths in tsconfig and babel(to recognize in require callings); Small code structure changes

--- a/src/translations/en/main.json
+++ b/src/translations/en/main.json
@@ -23,6 +23,10 @@
     "temp": {
         "current_range": "H:%{max}⁰ L:%{min}⁰"
     },
+    "errors": {
+        "get_position": "Failed to get current position, check the location permission and/or try to reopen the app.",
+        "get_openweather_data": "Failed to get OpenWeather data, try to reopen the app."
+    },
     "now": "Now",
     "sunrise": "Sunrise",
     "sunset": "Sunset",
